# cdict

./: Cargo.toml
examples/: args.rs
src/: main.rs  translator.rs
src/dicts/: baidu.rs  caiyun.rs  youdao.rs
